--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/rindrajosia/restaurant.git"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
