--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack",
+  "name": "restaurant",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/rindrajosia/restaurant/issues"
   },
-  "homepage": "https://github.com/rindrajosia/restaurant#readme"
+  "homepage": "https://github.com/rindrajosia/restaurant#readme",
+  "devDependencies": {
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
+  }
 }
